Archive2/da/46680dcc7b5b99/output
main.cpp:5:24: error: expected parentheses around type name in sizeof expression
    std::cout << sizeof int;
                       ^
                       (   )
1 error generated.
