Archive2/da/46680dcc7b5b99/main.cpp
#include <iostream>
#include <type_traits>

int main() {
    std::cout << sizeof int;
}